--- a/config.ini
+++ b/config.ini
@@ -5,7 +5,7 @@
 # link: Link to the main page
 # owner_name: Your name
 # owner_email: Your e-mail address
-name = Plane Mg
+name = Planet Mg
 link = http://gedmin.as/planets/mg/
 owner_name = Marius Gedminas
 owner_email = marius@gedmin.as
