--- a/config.ini
+++ b/config.ini
@@ -20,7 +20,7 @@ feed_timeout = 20
 # output_theme: "theme" of the output
 # output_dir: Directory to place output files
 # items_per_page: How many items to put on each page
-output_theme = classic_fancy
+output_theme = ./theme
 output_dir = ./output
 items_per_page = 100
 
