--- a/config.ini
+++ b/config.ini
@@ -6,7 +6,7 @@
 # owner_name: Your name
 # owner_email: Your e-mail address
 name = Planet Mg
-link = http://gedmin.as/planets/mg/
+link = http://gedmin.as/planet/
 owner_name = Marius Gedminas
 owner_email = marius@gedmin.as
 
