Resurrect the test suite

--- a/theme/config.ini
+++ b/theme/config.ini
@@ -26,3 +26,7 @@ bill_of_materials:
   images/closed-hi.png
   images/close-hi.png
   js/planetmg.js
+  test.html
+  js/tests.js
+  js/runner.js
+  js/jsUnitCore.js
