--- a/theme/config.ini
+++ b/theme/config.ini
@@ -26,6 +26,8 @@ bill_of_materials:
   images/closed-hi.png
   images/close-hi.png
   js/planetmg.js
+  js/jquery-1.9.1.min.js
+  js/jquery-1.9.1.min.map
   test.html
   js/tests.js
   js/runner.js
