Try to add a favicon

--- a/theme/config.ini
+++ b/theme/config.ini
@@ -16,6 +16,7 @@ template_directories:
 
 bill_of_materials:
   planet.css
+  favicon.ico
   images/feed-icon-10x10.png
   images/logo.png
   images/planet.png
