Subscribe to Atomic Skies

--- a/config.ini
+++ b/config.ini
@@ -43,3 +43,6 @@ new_feed_items = 50
 # subscription list
 [subscriptions.xml]
 content_type = opml
+
+[http://atomic-skies.blogspot.com/feeds/posts/default]
+title = Atomic Skies
