Ignore entry modification dates from Charlie's Diary
This should fix the floating entries issue.

I'm not sure I had to comment out the XML bits.  I wasn't sure Planet is
smart enough to merge feed settings from both the XML and the INI.

I'm not sure if I have to rm cache/antipope* cache/sources/antipope*.

--- a/config.ini
+++ b/config.ini
@@ -44,5 +44,10 @@ new_feed_items = 50
 [subscriptions.xml]
 content_type = opml
 
+[http://www.antipope.org/charlie/blog-static/atom.xml]
+title = Charlie's Diary
+# <updated> changes whenever there are comments on an entry
+ignore_in_feed = updated
+
 [http://atomic-skies.blogspot.com/feeds/posts/default]
 title = Atomic Skies
