Fix missing Usability Post link
Experiment and find out that specifying a feed both in subscriptions.xml
and in config.ini does the right thing

Discover that feed titles are supposed to be in the `name` attribute in
the INI file, and that Planet can figure out titles form the feed all by
itself.

Incidentally, when you try to override a blog's link, be sure to do

  rm cache/sources/mangledurl
  bin/planet -n

because if you just do bin/planet -o, changes will not take effect.

--- a/config.ini
+++ b/config.ini
@@ -44,10 +44,14 @@ new_feed_items = 50
 [subscriptions.xml]
 content_type = opml
 
+# overrides
 [http://www.antipope.org/charlie/blog-static/atom.xml]
-title = Charlie's Diary
 # <updated> changes whenever there are comments on an entry
 ignore_in_feed = updated
 
+[http://feeds.feedburner.com/usabilitypost]
+link = http://www.usabilitypost.com/
+
+# new subscriptions
 [http://atomic-skies.blogspot.com/feeds/posts/default]
-title = Atomic Skies
+# name = Atomic Skies
