--- a/config.ini
+++ b/config.ini
@@ -55,3 +55,6 @@ link = http://www.usabilitypost.com/
 # new subscriptions
 [http://atomic-skies.blogspot.com/feeds/posts/default]
 # name = Atomic Skies
+
+[http://rusty.ozlabs.org/?feed=rss2]
+# name = Rusty Russell's Coding Blog
