Show alt text in xkcd comic feed

--- a/config.ini
+++ b/config.ini
@@ -40,6 +40,9 @@ new_feed_items = 50
 ##   favicon.ico
 ##   robots.txt
 
+# directories in which filters can be found
+filter_directories = filters
+
 # subscription list
 [subscriptions.xml]
 content_type = opml
@@ -51,6 +54,9 @@ ignore_in_feed = updated
 
 [http://feeds.feedburner.com/usabilitypost]
 link = http://www.usabilitypost.com/
+
+[http://xkcd.com/rss.xml]
+filters = alttext.xslt
 
 # new subscriptions
 [http://atomic-skies.blogspot.com/feeds/posts/default]
