Subscribe to WTF Crypto

--- a/config.ini
+++ b/config.ini
@@ -64,3 +64,6 @@ filters = alttext.xslt
 
 [http://rusty.ozlabs.org/?feed=rss2]
 # name = Rusty Russell's Coding Blog
+
+[http://wtfcrypto.com/rss]
+# name = WTF Crypto
