Subscribe to Andriaus Tapino tinklaraštis

--- a/config.ini
+++ b/config.ini
@@ -67,3 +67,6 @@ filters = alttext.xslt
 
 [http://wtfcrypto.com/rss]
 # name = WTF Crypto
+
+[http://www.tapinas.lt/feed/]
+# name = Andriaus Tapino tinklaraštis
