Subscribe to Coveralls.io Blog

--- a/config.ini
+++ b/config.ini
@@ -70,3 +70,6 @@ filters = alttext.xslt
 
 [http://www.tapinas.lt/feed/]
 # name = Andriaus Tapino tinklaraštis
+
+[http://blog.coveralls.io/feed.xml]
+# name = Coveralls.io Blog
