Subscribe to Sirex web log

--- a/config.ini
+++ b/config.ini
@@ -73,3 +73,6 @@ filters = alttext.xslt
 
 [http://blog.coveralls.io/feed.xml]
 # name = Coveralls.io Blog
+
+[http://feeds.feedburner.com/SirexsBlog]
+# name = Sirex web log
