Add titles back to identi.ca feed

--- a/config.ini
+++ b/config.ini
@@ -58,6 +58,9 @@ link = http://www.usabilitypost.com/
 [http://xkcd.com/rss.xml]
 filters = alttext.xslt
 
+[http://identi.ca/api/statuses/friends_timeline/mgedmin.atom]
+filters = addtitle.xslt
+
 # new subscriptions
 [http://atomic-skies.blogspot.com/feeds/posts/default]
 # name = Atomic Skies
