Make all links in the main content are open in new tabs

--- a/config.ini
+++ b/config.ini
@@ -43,6 +43,9 @@ new_feed_items = 50
 # directories in which filters can be found
 filter_directories = filters
 
+# default filters
+filters = openinnewtab.xslt
+
 # subscription list
 [subscriptions.xml]
 content_type = opml
