--- a/theme/config.ini
+++ b/theme/config.ini
@@ -29,6 +29,7 @@ bill_of_materials:
   js/planetmg.js
   js/jquery-1.9.1.min.js
   js/jquery-1.9.1.min.map
+  js/fastclick-0.6.7.js
   test.html
   js/tests.js
   js/runner.js
