Subscribe to Stubbornella

--- a/config.ini
+++ b/config.ini
@@ -82,3 +82,6 @@ filters = addtitle.xslt
 
 [http://feeds.feedburner.com/SirexsBlog]
 # name = Sirex web log
+
+[http://www.stubbornella.org/content/feed/]
+# name = Stubbornella
