Subscribe to Bigglethwaite & Windemere's Manual of Proper and Exquisite English

--- a/config.ini
+++ b/config.ini
@@ -85,3 +85,6 @@ filters = addtitle.xslt
 
 [http://www.stubbornella.org/content/feed/]
 # name = Stubbornella
+
+[https://bigglethwaiteandwindemere.wordpress.com/feed/]
+# name = Proper and Exquisite English
