Subscribe to programming is terrible

--- a/config.ini
+++ b/config.ini
@@ -88,3 +88,6 @@ filters = addtitle.xslt
 
 [https://bigglethwaiteandwindemere.wordpress.com/feed/]
 # name = Proper and Exquisite English
+
+[http://programmingisterrible.com/rss]
+# name = programming is terrible
