Filter to show images inline

--- a/config.ini
+++ b/config.ini
@@ -61,6 +61,9 @@ link = http://www.usabilitypost.com/
 [http://xkcd.com/rss.xml]
 filters = alttext.xslt
 
+[http://www.kevinandkell.com/rss.xml]
+filters = inlineimg.py
+
 [http://identi.ca/api/statuses/friends_timeline/mgedmin.atom]
 filters = addtitle.xslt
 
