Subscribe to Sandra and Woo
The HTML points to an RSS feed at http://www.sandraandwoo.com/feed/, which gives me a 403 forbidden with curl or urllib, but redirects to feedburner in a browser.

--- a/config.ini
+++ b/config.ini
@@ -94,3 +94,6 @@ filters = addtitle.xslt
 
 [http://programmingisterrible.com/rss]
 # name = programming is terrible
+
+[http://feeds.feedburner.com/sandraandwoo]
+# name = Sandra and Woo
