Fix images in the Chaos Life feed

--- a/config.ini
+++ b/config.ini
@@ -67,6 +67,9 @@ filters = inlineimg.py
 [http://identi.ca/api/statuses/friends_timeline/mgedmin.atom]
 filters = addtitle.xslt
 
+[http://chaoslife.findchaos.com/feed]
+filters = fixchaoslife.py
+
 # new subscriptions
 #[http://atomic-skies.blogspot.com/feeds/posts/default]
 # name = Atomic Skies
