Inline Girl Genius comics

--- a/config.ini
+++ b/config.ini
@@ -70,6 +70,9 @@ filters = addtitle.xslt
 [http://chaoslife.findchaos.com/feed]
 filters = fixchaoslife.py
 
+[http://www.girlgeniusonline.com/ggmain.rss]
+filters = ggcomic.py
+
 # new subscriptions
 #[http://atomic-skies.blogspot.com/feeds/posts/default]
 # name = Atomic Skies
