--- a/config.ini
+++ b/config.ini
@@ -104,3 +104,9 @@ filters = ggcomic.py
 [http://feeds.feedburner.com/sandraandwoo]
 # name = Sandra and Woo
 filters = sandraandwoo.py
+
+[https://github.com/blog/ship.atom]
+# name = The GitHub Blog: New Features
+
+[https://github.com/blog/engineering.atom]
+# name = The GitHub Blog: Engineering
