Subscribe to Julia Evans's blog

--- a/config.ini
+++ b/config.ini
@@ -110,3 +110,6 @@ filters = sandraandwoo.py
 
 [https://github.com/blog/engineering.atom]
 # name = The GitHub Blog: Engineering
+
+[http://jvns.ca/atom.xml]
+# name = Julia Evans
