Subscribe to Programming in the 21st Century

--- a/config.ini
+++ b/config.ini
@@ -113,3 +113,7 @@ filters = sandraandwoo.py
 
 [http://jvns.ca/atom.xml]
 # name = Julia Evans
+
+[http://prog21.dadgum.com/atom.xml]
+# name = Programming in the 21st Century
+
