Subscribe to absorptions
That awesome blog by Oona Räisänen about signals processing with Perl.

--- a/config.ini
+++ b/config.ini
@@ -117,3 +117,5 @@ filters = sandraandwoo.py
 [http://prog21.dadgum.com/atom.xml]
 # name = Programming in the 21st Century
 
+[http://www.windytan.com/feeds/posts/default]
+# name = absorptions
