Subscribe to kdc-blog
Because http://kdc-blog.blogspot.com/2008/03/debugging-war-story-2.html was funny.

--- a/config.ini
+++ b/config.ini
@@ -119,3 +119,6 @@ filters = sandraandwoo.py
 
 [http://www.windytan.com/feeds/posts/default]
 # name = absorptions
+
+[http://kdc-blog.blogspot.com/feeds/posts/default]
+# name = kgc-blog
