The identi.ca feed is dead
I'd commented it out in subscriptions.xml, but forgot the override in
config.ini which resurrected it

--- a/config.ini
+++ b/config.ini
@@ -64,8 +64,9 @@ filters = alttext.xslt
 [http://www.kevinandkell.com/rss.xml]
 filters = inlineimg.py
 
-[http://identi.ca/api/statuses/friends_timeline/mgedmin.atom]
-filters = addtitle.xslt
+# identica is dead to me
+#[http://identi.ca/api/statuses/friends_timeline/mgedmin.atom]
+#filters = addtitle.xslt
 
 [http://chaoslife.findchaos.com/feed]
 filters = fixchaoslife.py
