Add <author> to LJ

--- a/config.ini
+++ b/config.ini
@@ -74,6 +74,9 @@ filters = fixchaoslife.py
 [http://www.girlgeniusonline.com/ggmain.rss]
 filters = ggcomic.py
 
+[http://james-nicoll.livejournal.com/data/atom]
+filters = ljauthor.py
+
 # new subscriptions
 #[http://atomic-skies.blogspot.com/feeds/posts/default]
 # name = Atomic Skies
@@ -123,3 +126,4 @@ filters = sandraandwoo.py
 
 [http://kdc-blog.blogspot.com/feeds/posts/default]
 # name = kgc-blog
+
