Subscribe to Monica Dinosaurescu

--- a/config.ini
+++ b/config.ini
@@ -127,3 +127,5 @@ filters = sandraandwoo.py
 [http://kdc-blog.blogspot.com/feeds/posts/default]
 # name = kgc-blog
 
+[http://notwaldorf.github.io/atom.xml]
+# name = Monica Dinosaurescu
