--- a/config.ini
+++ b/config.ini
@@ -44,7 +44,9 @@ new_feed_items = 50
 filter_directories = filters
 
 # default filters
-filters = openinnewtab.xslt
+filters =
+    openinnewtab.xslt
+    ljauthor.py
 
 # subscription list
 [subscriptions.xml]
@@ -75,7 +77,8 @@ filters = fixchaoslife.py
 filters = ggcomic.py
 
 [http://james-nicoll.livejournal.com/data/atom]
-filters = ljauthor.py
+# part of default filters now
+# filters = ljauthor.py
 
 # new subscriptions
 #[http://atomic-skies.blogspot.com/feeds/posts/default]
