Remove Sandra and Woo
Because meh and also because the author lacks empathy.

--- a/config.ini
+++ b/config.ini
@@ -108,9 +108,9 @@ filters = ggcomic.py
 [http://programmingisterrible.com/rss]
 # name = programming is terrible
 
-[http://feeds.feedburner.com/sandraandwoo]
-# name = Sandra and Woo
-filters = sandraandwoo.py
+##[http://feeds.feedburner.com/sandraandwoo]
+### name = Sandra and Woo
+##filters = sandraandwoo.py
 
 [https://github.com/blog/ship.atom]
 # name = The GitHub Blog: New Features
