Subscribe to the Blobs in Games blog by @redblobgames
Because articles like http://www.redblobgames.com/pathfinding/a-star/introduction.html with awesome d3.js visualizations are awesome.

--- a/config.ini
+++ b/config.ini
@@ -132,3 +132,6 @@ filters = ggcomic.py
 
 [http://notwaldorf.github.io/atom.xml]
 # name = Monica Dinosaurescu
+
+[http://simblob.blogspot.com/feeds/posts/default]
+# name = Blobs in Games
